tests/neg/syntax_include_missing.baa
// RUN: expect-fail
// EXPECT: تعذر فتح ملف التضمين

#تضمين "tests/fixtures/lexer_production/missing.baahd"

صحيح الرئيسية() {
    إرجع ٠.
}
